# BooksCRUD

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0462e2810302_new_migration.py  245e5fbf660a_add_user_model.py  37ec80319b20_rename_hash_password_tp_password_in_.py  420d0020490e_.py  7db28b5fb330_.py  81c68924056c_add_column_tags.py  aff0281f5def_.py
api/: base.py  deps.py
api/endpoints/: api.py
api/endpoints/version1/: route_books.py  route_tags.py  route_users.py
api/version1/: route_books.py  route_login.py  route_tags.py  route_users.py
app/: main.py
app/apis/: base.py
app/apis/version1/: route_books.py  route_login.py  route_users.py
app/core/: config.py
app/crud/: crud_books.py  crud_user.py
app/db/: session.py
app/models/: book.py  user.py
app/schemas/: __init__.py  book.py
core/: config.py  hashing.py  security.py
crud/: __init__.py  base_crud.py  book_crud.py  crud_books.py  crud_tags.py  crud_user.py  tag_crud.py  user_crud.py
db/: session.py
errors/: app_error.py
models/: __init__.py  book.py  tag.py  user.py
schemas/: __init__.py  book.py  token.py  user.py
service/: __init__.py  auth_service.py  book_service.py  tag_service.py  user_service.py
tests/: conftest.py
tests/api/api_v1/: test_books.py  test_tags.py  test_users.py
tests/utils/: book.py  user.py
utils/: __init__.py  app_exceptions.py  db_mixin.py  service_result.py
